--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-cayman
 description: Feel free to bookmark this to keep an eye on my project updates
