--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-midnight
 title: My webpage
 description: > 
             Feel free to bookmark this to keep an eye on my project updates
